Testing font colors

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" type="text/css" href="styles.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-  <p class="pink-text">This is pink text.</p>
+  <p class="pink-font">This is pink text.</p>
 </body>
 </html>
