--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <link rel="stylesheet" type="text/css" href="style.css">
-</head>
-<body>
-  <p class="pink-font">This is pink text.</p>
-</body>
-</html>
+<style>
+  body {
+    background: black;
+  }
+</style>
+<canvas>
+
+</canvas>
+
+<script src="js/classes/Player.js"></script>
+<script src="index.js"></script>
